Uploaded IWC paper to pdf. Tested link to NOAA TM online.

--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -54,7 +54,7 @@ https://doi.org/10.1139/juvs-2018-0002
 
 **Ferguson**, M.C., J.T. Clarke, A.A. Brower, A.L. Willoughby, and S.R. Okkonen. 2021. Ecological variation in the western Beaufort Sea. In: J.C. George and J.G.M. Thewissen (Eds.), The Bowhead Whale Balaena mysticetus: biology and human interactions. Academic Press, pp. 365-379.  
 
-**Ferguson**, M.C., J. T. Clarke, A. L. Willoughby, A. A. Brower, and A. D. Rotrock. 2021. Geographically stratified abundance estimate for Bering-Chukchi-Beaufort Seas bowhead whales (Balaena mysticetus) from an August 2019 aerial line-transect survey in the Beaufort Sea and Amundsen Gulf. U.S. Dep. Commer., NOAA Technical Memorandum NMFS-AFSC-428, 54 p.  
+**Ferguson**, M.C., J. T. Clarke, A. L. Willoughby, A. A. Brower, and A. D. Rotrock. 2021. Geographically stratified abundance estimate for Bering-Chukchi-Beaufort Seas bowhead whales (Balaena mysticetus) from an August 2019 aerial line-transect survey in the Beaufort Sea and Amundsen Gulf. U.S. Dep. Commer., NOAA Technical Memorandum NMFS-AFSC-428, 54 p. [pdf](https://repository.library.noaa.gov/view/noaa/33451) 
 
 **Ferguson**, M.C., C. Curtice, and J. Harrison. 2015. Biologically Important Areas for cetaceans within U.S. waters: Gulf of Alaska region. Aquatic Mammals 41(1): 65-78.  
 
