Added 67A AWMP 10 to pdfs

--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -60,68 +60,69 @@ https://doi.org/10.1139/juvs-2018-0002
 
 **Ferguson**, M.C., C. Curtice, J. Harrison, and S.M. Van Parijs. 2015. Biologically Important Areas for marine mammals within U.S. waters: Overview and rationale. Aquatic Mammals 41(1):2-16. http://dx.doi.org/10.1578/AM.41.1.2015.1 
 
-**Ferguson**, M.C., D.L. Miller, J.T. Clarke, A.A. Brower, A.L. Willoughby, and A.D. Rotrock. 2022. Spatial modeling, parameter uncertainty, and precision of density estimates from line-transect surveys: a case study with Western Arctic bowhead whales. Paper SC/68d/ASI/01 presented to the IWC Scientific Committee, May 2022.
+**Ferguson**, M.C., D.L. Miller, J.T. Clarke, A.A. Brower, A.L. Willoughby, and A.D. Rotrock. 2022. Spatial modeling, parameter uncertainty, and precision of density estimates from line-transect surveys: a case study with Western Arctic bowhead whales. Paper SC/68d/ASI/01 presented to the IWC Scientific Committee, May 2022. [pdf](https://github.com/megancatonferguson/MCF_CV/blob/main/pdfs/SC_68D_ASI_01.pdf)
 
-**Ferguson**, M.C., S.F. Tóth, J.T. Clarke, A.L. Willoughby, A.A. Brower, and T.P. White. 2023. Biologically Important Areas for Bowhead Whales (Balaena mysticetus): Optimal site selection with integer programming. Frontiers in Marine Science 10: 961163. DOI 10.3389/fmars.2023.961163.  
+**Ferguson**, M.C., S.F. Tóth, J.T. Clarke, A.L. Willoughby, A.A. Brower, and T.P. White. 2023. Biologically Important Areas for Bowhead Whales (Balaena mysticetus): Optimal site selection with integer programming. Frontiers in Marine Science 10: 961163. https://www.frontiersin.org/articles/10.3389/fmars.2023.961163/full 
 
 **Ferguson**, M.C., J. Waite, C. Curtice, J.T. Clarke, and J. Harrison. 2015. Biologically Important Areas for cetaceans within U.S. waters: Aleutian Islands and Bering Sea region. Aquatic Mammals 41(1):79-93. http://dx.doi.org/10.1578/AM.41.1.2015.1 
 
-Angliss, R.P., M.C. **Ferguson**, P. Hall, V. Helker, A. Kennedy, and T. Sformo. 2018. Comparing manned aerial surveys to unmanned aerial surveys for cetacean monitoring in the Arctic: Operational results and recommendations. Journal of Unmanned Vehicle Systems 6(3): 109-127.  
+Angliss, R.P., M.C. **Ferguson**, P. Hall, V. Helker, A. Kennedy, and T. Sformo. 2018. Comparing manned aerial surveys to unmanned aerial surveys for cetacean monitoring in the Arctic: Operational results and recommendations. Journal of Unmanned Vehicle Systems 6(3): 109-127. https://cdnsciencepub.com/doi/10.1139/juvs-2018-0001  
 
-Blackwell, S.B., A.M. Thode, A.S. Conrad, M.C. **Ferguson**, C.L. Berchok, K.M. Stafford, T.A. Marques, and K.H. Kim. Estimating acoustic cue rates in bowhead whales, Balaena mysticetus, during their fall migration through the Alaskan Beaufort Sea. 2021. Journal of the Acoustical Society of America 149(5): 3611-3625. DOI 10.1121/10.0005043.  
+Blackwell, S.B., A.M. Thode, A.S. Conrad, M.C. **Ferguson**, C.L. Berchok, K.M. Stafford, T.A. Marques, and K.H. Kim. Estimating acoustic cue rates in bowhead whales, Balaena mysticetus, during their fall migration through the Alaskan Beaufort Sea. 2021. Journal of the Acoustical Society of America 149(5): 3611-3625. https://doi.org/10.1121/10.0005043  
 
-Brower, A.B., J.T. Clarke, M.C. **Ferguson**. 2018. Increased Sightings of SubArctic Cetaceans in the Eastern Chukchi Sea, 2008-2016: population recovery, response to climate change, or increased effort? Polar Biology. DOI 10.1007/s00300-018-2257-x.  
+Brower, A.B., J.T. Clarke, M.C. **Ferguson**. 2018. Increased Sightings of SubArctic Cetaceans in the Eastern Chukchi Sea, 2008-2016: population recovery, response to climate change, or increased effort? Polar Biology. https://doi.org/10.1007/s00300-018-2257-x  
 
-Brower A., M. **Ferguson**, J. Clarke, E. Fujioka, and S. DeLand. 2022. Biologically Important Areas II for cetaceans within U.S. and adjacent waters – Aleutian Islands and Bering Sea region. Frontiers in Marine Science 9:1055398. DOI 10.3389/fmars.2022.1055398.  
+Brower A., M. **Ferguson**, J. Clarke, E. Fujioka, and S. DeLand. 2022. Biologically Important Areas II for cetaceans within U.S. and adjacent waters – Aleutian Islands and Bering Sea region. Frontiers in Marine Science 9:1055398. https://doi.org/10.3389/fmars.2022.1055398  
 
 Brower, A., M. **Ferguson**, S. Schonberg, S. Jewett, and J. Clarke. 2017. Gray whale distribution relative to benthic invertebrate biomass and abundance: northeastern Chukchi Sea, 2009-2012. Deep-Sea Research II 144: 156-174. https://doi.org/10.1016/j.dsr2.2016.12.007.  
 
-Brower, A., M. **Ferguson**, and A. Willoughby. 2022. Bowhead whale distribution and relative density in relation to remote-sensed physical and biological environmental data in the Pacific Arctic, 2014-2019. U.S. Department of Commerce, Technical Memorandum NMFS-AFSC-438. 234 p.  
+Brower, A., M. **Ferguson**, and A. Willoughby. 2022. Bowhead whale distribution and relative density in relation to remote-sensed physical and biological environmental data in the Pacific Arctic, 2014-2019. U.S. Department of Commerce, Technical Memorandum NMFS-AFSC-438. 234 p. [pdf](https://repository.library.noaa.gov/view/noaa/43044) 
 
-Brower, A., A. Willoughby, and M. **Ferguson**. 2022. Distribution and relative abundance of bowhead whales and other marine mammals in the western Beaufort Sea, 2020. U.S. Department of Commerce, NOAA Technical Memorandum NMFS-AFSC-439. 155 p.
-Brower, A.A., A.L. Willoughby, K.A. Scheimreif, and M.C. **Ferguson**. 2022. Distribution and relative abundance of bowhead whales and other marine mammals in the western Beaufort Sea, 2021. U.S. Department of Commerce, NOAA Technical Memorandum NMFS-AFSC-455, 201 p.  
+Brower, A., A. Willoughby, and M. **Ferguson**. 2022. Distribution and relative abundance of bowhead whales and other marine mammals in the western Beaufort Sea, 2020. U.S. Department of Commerce, NOAA Technical Memorandum NMFS-AFSC-439. 155 p. [pdf](https://repository.library.noaa.gov/view/noaa/44403) 
 
-Calambokidis, J., G. Steiger, C. Curtice, J. Harrison, M.C. **Ferguson**, E. Becker, M. DeAngelis, and S.M. Van Parijs. 2015. Biologically Important Areas for cetaceans within U.S. waters: West Coast region. Aquatic Mammals 41(1): 39-53.  
+Brower, A.A., A.L. Willoughby, K.A. Scheimreif, and M.C. **Ferguson**. 2022. Distribution and relative abundance of bowhead whales and other marine mammals in the western Beaufort Sea, 2021. U.S. Department of Commerce, NOAA Technical Memorandum NMFS-AFSC-455, 201 p. [pdf](https://repository.library.noaa.gov/view/noaa/47924) 
 
-Castellote, M., A. Mooney, R. Andrews, S. Deruiter, W. Lee, M. **Ferguson**, and P. Wade. 2021. Beluga whale (Delphinapterus leucas) acoustic foraging behavior and applications for long term monitoring. PlosONE 16(11): e0260485. DOI 10.1371/journal.pone.0260485.  
+Calambokidis, J., G. Steiger, C. Curtice, J. Harrison, M.C. **Ferguson**, E. Becker, M. DeAngelis, and S.M. Van Parijs. 2015. Biologically Important Areas for cetaceans within U.S. waters: West Coast region. Aquatic Mammals 41(1): 39-53. http://dx.doi.org/10.1578/AM.41.1.2015.1  
 
-Christman, C., J. Citta, L. Quakenbush, J. Clarke, B. Rone, R. Shea, M. **Ferguson** and M. Heide-Jørgensen. 2013. Presence and behavior of bowhead whales (Balaena mysticetus) in the Alaskan Beaufort Sea in July 2011. Polar Biology 36(12): 1851-1856. DOI 10.1007/s00300-013-1395-4.  
+Castellote, M., A. Mooney, R. Andrews, S. Deruiter, W. Lee, M. **Ferguson**, and P. Wade. 2021. Beluga whale (Delphinapterus leucas) acoustic foraging behavior and applications for long term monitoring. PlosONE 16(11): e0260485. https://doi.org/10.1371/journal.pone.0260485  
 
-Clarke, J., A. Brower, C. Christman, and M. **Ferguson**. 2014. Distribution and relative abundance of marine mammals in the northeastern Chukchi and western Beaufort Seas, 2013. Annual report, OCS Study BOEM 2014-0018. National Marine Mammal Laboratory, Alaska Fisheries Science Center, NMFS, NOAA, 7600 Sand Point Way NE, F/AKC, Seattle, WA 98115-6349. 330 pp.  
+Christman, C., J. Citta, L. Quakenbush, J. Clarke, B. Rone, R. Shea, M. **Ferguson** and M. Heide-Jørgensen. 2013. Presence and behavior of bowhead whales (Balaena mysticetus) in the Alaskan Beaufort Sea in July 2011. Polar Biology 36(12): 1851-1856. https://doi.org/10.1007/s00300-013-1395-4  
 
-Clarke, J.T., A.A. Brower, M.C. **Ferguson**, and A.S. Kennedy. 2015. Distribution and relative abundance of marine mammals in the eastern Chukchi and western Beaufort seas, 2014. Annual Report, OCS Study BOEM 2015-040. National Marine Mammal Laboratory, Alaska Fisheries Science Center, NMFS, NOAA, 7600 Sand Point Way NE, F/AKC3, Seattle, WA 98115-6349.  
+Clarke, J., A. Brower, C. Christman, and M. **Ferguson**. 2014. Distribution and relative abundance of marine mammals in the northeastern Chukchi and western Beaufort Seas, 2013. Annual report, OCS Study BOEM 2014-0018. National Marine Mammal Laboratory, Alaska Fisheries Science Center, NMFS, NOAA, 7600 Sand Point Way NE, F/AKC, Seattle, WA 98115-6349. 330 pp. [pdf](https://www.fisheries.noaa.gov/resource/data/2013-aerial-surveys-arctic-marine-mammals)  
 
-Clarke, J.T., A.A. Brower, M.C. **Ferguson**, and A.L. Willoughby. 2017. Distribution and Relative Abundance of Marine Mammals in the Eastern Chukchi and Western Beaufort Seas, 2015. Annual Report, OCS Study BOEM 2017-019. National Marine Mammal Laboratory, Alaska Fisheries Science Center, NMFS, NOAA, 7600 Sand Point Way NE, F/AKC3, Seattle, WA 98115-6349.  
+Clarke, J.T., A.A. Brower, M.C. **Ferguson**, and A.S. Kennedy. 2015. Distribution and relative abundance of marine mammals in the eastern Chukchi and western Beaufort seas, 2014. Annual Report, OCS Study BOEM 2015-040. National Marine Mammal Laboratory, Alaska Fisheries Science Center, NMFS, NOAA, 7600 Sand Point Way NE, F/AKC3, Seattle, WA 98115-6349. [pdf](https://www.fisheries.noaa.gov/resource/data/2014-aerial-surveys-arctic-marine-mammals) 
 
-Clarke, J.T., A.A. Brower, M.C. **Ferguson**, and A.L. Willoughby. 2017. Distribution and Relative Abundance of Marine Mammals in the Eastern Chukchi and Western Beaufort Seas, 2016.  Annual Report, OCS Study BOEM 2017-078.  Marine Mammal Laboratory, Alaska Fisheries Science Center, NMFS, NOAA, 7600 Sand Point Way NE, F/AKC3, Seattle, WA 98115-6349.  
+Clarke, J.T., A.A. Brower, M.C. **Ferguson**, and A.L. Willoughby. 2017. Distribution and Relative Abundance of Marine Mammals in the Eastern Chukchi and Western Beaufort Seas, 2015. Annual Report, OCS Study BOEM 2017-019. National Marine Mammal Laboratory, Alaska Fisheries Science Center, NMFS, NOAA, 7600 Sand Point Way NE, F/AKC3, Seattle, WA 98115-6349. [pdf](https://www.fisheries.noaa.gov/resource/data/2015-aerial-surveys-arctic-marine-mammals)  
 
-Clarke, J.T., A.A. Brower, M.C. **Ferguson**, and A.L. Willoughby. 2018. Distribution and Relative Abundance of Marine Mammals in the Eastern Chukchi and Western Beaufort Seas, 2017. Annual Report, OCS Study BOEM 2018-023. Marine Mammal Laboratory, Alaska Fisheries Science Center, NMFS, NOAA, 7600 Sand Point Way NE, F/AKC3, Seattle, WA 98115-6349.  
+Clarke, J.T., A.A. Brower, M.C. **Ferguson**, and A.L. Willoughby. 2017. Distribution and Relative Abundance of Marine Mammals in the Eastern Chukchi and Western Beaufort Seas, 2016.  Annual Report, OCS Study BOEM 2017-078.  Marine Mammal Laboratory, Alaska Fisheries Science Center, NMFS, NOAA, 7600 Sand Point Way NE, F/AKC3, Seattle, WA 98115-6349. [pdf](https://www.fisheries.noaa.gov/resource/data/2016-aerial-surveys-arctic-marine-mammals) 
 
-Clarke, J.T., A.A. Brower, M.C. **Ferguson**, and A.L. Willoughby. 2019. Distribution and Relative Abundance of Marine Mammals in the Eastern Chukchi and Western Beaufort Seas, 2018. Annual Report, OCS Study BOEM 2019-021. Marine Mammal Laboratory, Alaska Fisheries Science Center, NMFS, NOAA, 7600 Sand Point Way NE, F/AKC3, Seattle, WA 98115-6349.  
+Clarke, J.T., A.A. Brower, M.C. **Ferguson**, and A.L. Willoughby. 2018. Distribution and Relative Abundance of Marine Mammals in the Eastern Chukchi and Western Beaufort Seas, 2017. Annual Report, OCS Study BOEM 2018-023. Marine Mammal Laboratory, Alaska Fisheries Science Center, NMFS, NOAA, 7600 Sand Point Way NE, F/AKC3, Seattle, WA 98115-6349. [pdf](https://www.fisheries.noaa.gov/resource/data/2017-aerial-surveys-arctic-marine-mammals) 
 
-Clarke, J.T., A.A. Brower, M.C. **Ferguson**, A.L. Willoughby, and A.D. Rotrock. 2020. Distribution and Relative Abundance of Marine Mammals in the Eastern Chukchi Sea, Eastern and Western Beaufort Sea, and Amundsen Gulf, 2019. Annual Report, OCS Study BOEM 2020-027. Marine Mammal Laboratory, Alaska Fisheries Science Center, NMFS, NOAA, 7600 Sand Point Way NE, F/AKC3, Seattle, WA 98115-6349.  
+Clarke, J.T., A.A. Brower, M.C. **Ferguson**, and A.L. Willoughby. 2019. Distribution and Relative Abundance of Marine Mammals in the Eastern Chukchi and Western Beaufort Seas, 2018. Annual Report, OCS Study BOEM 2019-021. Marine Mammal Laboratory, Alaska Fisheries Science Center, NMFS, NOAA, 7600 Sand Point Way NE, F/AKC3, Seattle, WA 98115-6349. [pdf](https://www.fisheries.noaa.gov/resource/data/2018-aerial-surveys-arctic-marine-mammals) 
 
-Clarke, J.T., C.L. Christman, A.A. Brower, and M.C. **Ferguson**. 2012. Distribution and relative abundance of marine mammals in the Alaskan Chukchi and Beaufort seas, 2011. Annual Report, OCS Study BOEM 2012-009. National Marine Mammal Laboratory, Alaska Fisheries Science Center, NMFS, NOAA, 7600 Sand Point Way NE, F/AKC3, Seattle, WA 98115-6349.  
+Clarke, J.T., A.A. Brower, M.C. **Ferguson**, A.L. Willoughby, and A.D. Rotrock. 2020. Distribution and Relative Abundance of Marine Mammals in the Eastern Chukchi Sea, Eastern and Western Beaufort Sea, and Amundsen Gulf, 2019. Annual Report, OCS Study BOEM 2020-027. Marine Mammal Laboratory, Alaska Fisheries Science Center, NMFS, NOAA, 7600 Sand Point Way NE, F/AKC3, Seattle, WA 98115-6349. [pdf](https://www.fisheries.noaa.gov/resource/data/2019-aerial-surveys-arctic-marine-mammals)  
 
-Clarke, J.T., C.L. Christman, A.A. Brower, and M.C. **Ferguson**. 2013. Distribution and relative abundance of marine mammals in the northeastern Chukchi and western Beaufort seas, 2012. Annual Report, OCS Study BOEM 2013-00117. National Marine Mammal Laboratory, Alaska Fisheries Science Center, NMFS, NOAA, 7600 Sand Point Way NE, F/AKC3, Seattle, WA 98115-6349.  
+Clarke, J.T., C.L. Christman, A.A. Brower, and M.C. **Ferguson**. 2012. Distribution and relative abundance of marine mammals in the Alaskan Chukchi and Beaufort seas, 2011. Annual Report, OCS Study BOEM 2012-009. National Marine Mammal Laboratory, Alaska Fisheries Science Center, NMFS, NOAA, 7600 Sand Point Way NE, F/AKC3, Seattle, WA 98115-6349. [pdf](https://www.fisheries.noaa.gov/resource/data/2011-aerial-surveys-arctic-marine-mammals) 
 
-Clarke, J., C. Christman, A.A. Brower, M.C. **Ferguson**, and S.L. Grassia. 2011. Aerial surveys of endangered whales in the Beaufort Sea, fall 2010. Annual report, OCS Study BOEMRE 2011-035. National Marine Mammal Laboratory, Alaska Fisheries Science Center, NMFS, NOAA, 7600 Sand Point Way NE, F/AKC, Seattle, WA 98115-6349. 119 pp.  
+Clarke, J.T., C.L. Christman, A.A. Brower, and M.C. **Ferguson**. 2013. Distribution and relative abundance of marine mammals in the northeastern Chukchi and western Beaufort seas, 2012. Annual Report, OCS Study BOEM 2013-00117. National Marine Mammal Laboratory, Alaska Fisheries Science Center, NMFS, NOAA, 7600 Sand Point Way NE, F/AKC3, Seattle, WA 98115-6349. [pdf](https://www.fisheries.noaa.gov/resource/data/2012-aerial-surveys-arctic-marine-mammals)  
 
-Clarke, J.T., C.L. Christman, M.C. **Ferguson**, and S.L. Grassia. 2011. Aerial surveys of endangered whales in the Beaufort Sea, fall 2006-2008. Final Report, OCS Study BOEMRE 2011-033. National Marine Mammal Laboratory, Alaska Fisheries Science Center, NMFS, NOAA, 7600 Sand Point Way NE, F/AKC3, Seattle, WA 98115-6349.  
+Clarke, J., C. Christman, A.A. Brower, M.C. **Ferguson**, and S.L. Grassia. 2011. Aerial surveys of endangered whales in the Beaufort Sea, fall 2010. Annual report, OCS Study BOEMRE 2011-035. National Marine Mammal Laboratory, Alaska Fisheries Science Center, NMFS, NOAA, 7600 Sand Point Way NE, F/AKC, Seattle, WA 98115-6349. 119 pp. [pdf](https://www.fisheries.noaa.gov/resource/data/2010-aerial-surveys-endangered-whales-beaufort-sea)  
 
-Clarke, J.T., C.L. Christman, S.L. Grassia, A.A. Brower, and M.C. **Ferguson**. 2011. Aerial surveys of endangered whales in the Beaufort Sea, fall 2009. Final Report, OCS Study BOEMRE 2011-040. National Marine Mammal Laboratory, Alaska Fisheries Science Center, NMFS, NOAA, 7600 Sand Point Way NE, F/AKC3, Seattle, WA 98115-6349.  
+Clarke, J.T., C.L. Christman, M.C. **Ferguson**, and S.L. Grassia. 2011. Aerial surveys of endangered whales in the Beaufort Sea, fall 2006-2008. Final Report, OCS Study BOEMRE 2011-033. National Marine Mammal Laboratory, Alaska Fisheries Science Center, NMFS, NOAA, 7600 Sand Point Way NE, F/AKC3, Seattle, WA 98115-6349. [pdf](https://www.fisheries.noaa.gov/resource/data/2006-2008-aerial-surveys-endangered-whales-beaufort-sea)  
 
-Clarke, J.T., M.C. **Ferguson**, A.A. Brower, E. Fujioka, and S. DeLand. 2023. Biologically Important Areas II for cetaceans in U.S. and adjacent waters – Arctic region. Frontiers in Marine Science 10:1040123. DOI 10.3389/fmars.2023.1040123.  
+Clarke, J.T., C.L. Christman, S.L. Grassia, A.A. Brower, and M.C. **Ferguson**. 2011. Aerial surveys of endangered whales in the Beaufort Sea, fall 2009. Final Report, OCS Study BOEMRE 2011-040. National Marine Mammal Laboratory, Alaska Fisheries Science Center, NMFS, NOAA, 7600 Sand Point Way NE, F/AKC3, Seattle, WA 98115-6349. [pdf](https://www.fisheries.noaa.gov/resource/data/2009-aerial-surveys-endangered-whales-beaufort-sea)  
 
-Clarke, J.T., M.C. **Ferguson**, C.L. Christman, S.L. Grassia, A.A. Brower, and L.J. Morse. 2011. Chukchi Offshore Monitoring in Drilling Area (COMIDA) distribution and relative abundance of marine mammals: aerial surveys. Final Report, OCS Study BOEMRE 2011-06. National Marine Mammal Laboratory, Alaska Fisheries Science Center, NMFS, NOAA, 7600 Sand Point Way NE, F/AKC3, Seattle, WA 98115-6349.  
+Clarke, J.T., M.C. **Ferguson**, A.A. Brower, E. Fujioka, and S. DeLand. 2023. Biologically Important Areas II for cetaceans in U.S. and adjacent waters – Arctic region. Frontiers in Marine Science 10:1040123. https://doi.org/10.3389/fmars.2023.1040123
 
-Clarke, J.T., M.C. **Ferguson**, C. Curtice, and J. Harrison. 2015. Biologically Important Areas for cetaceans within the U.S. waters: Arctic region. Aquatic Mammals 41(1):94-103.  
+Clarke, J.T., M.C. **Ferguson**, C.L. Christman, S.L. Grassia, A.A. Brower, and L.J. Morse. 2011. Chukchi Offshore Monitoring in Drilling Area (COMIDA) distribution and relative abundance of marine mammals: aerial surveys. Final Report, OCS Study BOEMRE 2011-06. National Marine Mammal Laboratory, Alaska Fisheries Science Center, NMFS, NOAA, 7600 Sand Point Way NE, F/AKC3, Seattle, WA 98115-6349. [pdf](https://www.fisheries.noaa.gov/resource/data/2008-2010-chukchi-offshore-monitoring-drilling-area-distribution-and-relative)  
 
-Clarke, J.T., M.C. **Ferguson**, S.R. Okkonen, A.A. Brower, and A.L. Willoughby. 2022. Bowhead whale calf detections in the western Beaufort sea during the open water season, 2012–2019. Arctic Science. DOI 10.1139/as-2021-0020.  
+Clarke, J.T., M.C. **Ferguson**, C. Curtice, and J. Harrison. 2015. Biologically Important Areas for cetaceans within the U.S. waters: Arctic region. Aquatic Mammals 41(1):94-103. http://dx.doi.org/10.1578/AM.41.1.2015.1  
 
-Clarke, J.T., M.C. **Ferguson**, A.L. Willoughby, and A.A. Brower. 2018. Bowhead whale and beluga distributions, sighting rates, and habitat associations in the western Beaufort Sea, summer and fall 2009-2016, with a retrospective comparison to 1982-1991. Arctic 71(2):115-138.  
+Clarke, J.T., M.C. **Ferguson**, S.R. Okkonen, A.A. Brower, and A.L. Willoughby. 2022. Bowhead whale calf detections in the western Beaufort sea during the open water season, 2012–2019. Arctic Science. https://doi.org/10.1139/as-2021-0020
 
-Clarke, J.T., A.S. Kennedy, and M.C. **Ferguson**. 2016. Bowhead and Gray Whale Distributions, Sighting Rates, and Habitat Associations in the Eastern Chukchi Sea, Summer and Fall 2009-2015, with a Retrospective Comparison to 1982-1991. Arctic 69(4):359-377.  
+Clarke, J.T., M.C. **Ferguson**, A.L. Willoughby, and A.A. Brower. 2018. Bowhead whale and beluga distributions, sighting rates, and habitat associations in the western Beaufort Sea, summer and fall 2009-2016, with a retrospective comparison to 1982-1991. Arctic 71(2):115-138. https://www.jstor.org/stable/26478010 
+
+Clarke, J.T., A.S. Kennedy, and M.C. **Ferguson**. 2016. Bowhead and Gray Whale Distributions, Sighting Rates, and Habitat Associations in the Eastern Chukchi Sea, Summer and Fall 2009-2015, with a Retrospective Comparison to 1982-1991. Arctic 69(4):359-377. https://www.jstor.org/stable/24878034  
 
 Douglas, A.B., J. Calambokidis, L.M. Munger, M.S. Soldevilla, M.C. **Ferguson**, A.M. Havron, D.L. Camacho, G.S. Campbell, and J.A. Hildebrand. 2014. Seasonal distribution and abundance of cetaceans off Southern California estimated from CalCOFI cruise data from 2004 to 2008. Fishery Bulletin 112: 197-220. DOI 10.7755/FB.112.2-3.7.  
 
